fixed background image cropping at bottom

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,22 +1,9 @@
-#background_wrap {
-    z-index: -1;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-size: cover;
-    background-image: url(../img/partly-cloudy.jpg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-}
-
 body {
-    /* background-image: url(../img/partly-cloudy.jpg);
+    background-image: url(../img/partly-cloudy.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover; */
+    background-size: cover;
     color: #333333;
     display: flex;
     flex-direction: column;
@@ -77,6 +64,12 @@ button {
 @media (max-width: 50rem) {
     h1 {
         font-size: 7vw;
+    }
+
+    #switchLocation {
+        border: .5px;
+        background: transparent;
+        color: black;
     }
 
     .sub-content {
